# flux-projects

./: README.md  pyproject.toml  requirements.txt
.dependabot/: config.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
flux-projects/: config_manager.py  flux-projects.py
flux-projects/cogs/: edit.py  error_handling.py  field.py  filter.py  info.py  issue.py  new.py  ping.py  project_command.py  project_info.py  question.py
flux-projects/util/: config_manager.py  db_manager.py
flux-projects/utility/: config_manager.py  db_manager.py
