[tool.poetry]
name = "flux-projects"
version = "0.1.0"
description = "A Discord bot to store, manage and interact with official and volunteer Flux projects."
authors = ["connorhsm <connorhsmith@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.5.0"
requests = "^2.28.1"
mysql-connector-python = "^8.0.22"
configparser = "^5.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
